--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <nav>
     <a href="/Users/gabella/Desktop/dossier-thp/mf.github.io/mfweb.html">MF</a>
-    <a href="/Users/gabella/Desktop/dossier-thp/mf.github.io/mfweb.html">BMF</a>
-    <a href="/Users/gabella/Desktop/dossier-thp/mf.github.io/mfweb.html">XBMF</a>
+    <a href="/Users/gabella/Desktop/dossier-thp/mf.github.io/bmfweb.html">BMF</a>
+    <a href="/Users/gabella/Desktop/dossier-thp/mf.github.io/xbmfweb.html">XBMF</a>
   </nav>
 <!-- Faire une ancre pour les trois différents sites -->
 
