--- a/bmfweb.html
+++ b/bmfweb.html
@@ -12,9 +12,9 @@
 <header>
 
   <nav>
-    <a href="/Users/gabella/Desktop/dossier-thp/mf.github.io/mfweb.html">MF</a>
-    <a href="/Users/gabella/Desktop/dossier-thp/mf.github.io/bmfweb.html">BMF</a>
-    <a href="/Users/gabella/Desktop/dossier-thp/mf.github.io/mfweb.html">XBMF</a>
+    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/index.html">MF</a>
+    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/bmfweb.html">BMF</a>
+    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/mfweb.html">XBMF</a>
   </nav>
 <!-- Faire une ancre pour les trois différents sites -->
 
