--- a/xbmfweb.html
+++ b/xbmfweb.html
@@ -98,21 +98,81 @@
 
 <h2>Put some pictures</h2>
 
-<img src="img/cat.jpg" alt="grey cat">
-<p class="legende">A cat, just to keep the context of the website.</p>
+
+<div class="container">
 
 
 
-<blockquote>"You're a fucking moron if you use default browser styles."
+<div class="imggauche">
+  <img src="img/cat.jpg" alt="grey cat">
+  <p class="legende">A cat, just to keep the context of the website.</p>
+</div>
+
+<div class="txtdroit">
+
+  <p>We're not looking at a novel by Stephanie Meyer, this is a <span class="mfw">motherfuckingwebsite</span> so include some pictures to give a context.</p>
+
+  <p>The website shouldn't be overfilled with pictures, but it should make the user happy while reading your nonsense words.</p>
+
+  <p>You see that fancy cat? He's happy, you should be too.</p>
+
+</div>
+
+
+
+</div>
+
+<h2>Yes, even this is satire.</h2>
+
+<p>But this doesn't mean you should load your <span class="mfw">motherfuckingwebsite</span> with shitty animations, instead keep it simple, minify its resources and use images responsibly. Remember the IPoAC users!</p>
+
+
+<blockquote>"Good design is as little design as possible."
 <br>
-- Eleanor Roosevelt</blockquote>
+<author>- Some German motherfucker on motherfuckingwebsite.com </author>
+</blockquote>
 
-<hr>
+
+<p>That's not entirely true, look at that <span class="mfw">motherfuckingwebsite</span>. It's so minimal that it can be considered crap.</p>
+
 
 <h2>Epilogue</h2>
 
-<p>Inspired by the geniuses behind <a href="http://motherfuckingwebsite.com/">motherfuckingwebsite.com</a> and <a href="http://txti.es">txti</a>.</p>
-<p>This page&mdash;that isn't a total fucking eyesore&mdash;was created by <a href="https://twitter.com/drew_mc">me</a> with help from <a href="https://twitter.com/gabehammersmith">him</a>.</p>
+<p>Actually this website was made to follow the trend of the motherfuckingwebsite and the bettermotherfuckingwebsite.</p>
+
+<p>Despite what was said here they're beautiful and truly among the best websites on the internet (even though this is still thebestmotherfuckingwebsite), so go check 'em out.</p>
+
+<p>Seriously, follow some of the advice we gave you, they'll "make the web great again" Cit. needed</p>
+
+
+<h2>Author</h2>
+
+<p>This website was created by an annoyed developer that can be followed on Twitter, followed on GitHub or contacted here, on his ultra-minimalist website</p>
+
+<h2>Resources</h2>
+
+<p>The cat picture was taken from the cool Pixabay website: check it out, it's really cool and full of CC0 (aka Public Domain) content. The author is 1899441 (seriously? His username looks like my PIN code!), the old picture was by aloiswohlfahrt, but I had to change it, cause it was too heavy and too cute. You can open an issue on GitHub if you think that this decision goes against the rules of a good looking motherfuckingwebsite.</p>
+
+<h2>Legal</h2>
+
+<p>This website can be freely copied, modified, altered, distributed without any attribution whatsoever. However, if you feel like this website deserves an attribution, mention it. It won't hurt anybody :)</p>
+
+<p>Please, read the <a href="https://thebestmotherfucking.website/LICENSE.txt">license terms</a>. </p>
+<p>Don't worry, it can be read in less than 30 seconds, unless you have some sort of reading disability - in that case, I'm wondering why you're still reading this text. Really. Stop. Please. I mean, seriously. Why are you still reading?</p>
+
+
+<img src="img/kopimi.svg" alt="logo kopimi" class="imgkopimi">
+
+<h2>Contributions</h2>
+
+<p>Since this website includes some contributions, and I'm not an asshole, I'll publically thank the following users for their help:</p>
+
+<ul>
+  <li>People</li>
+  <li>Links</li>
+  <li>some colored</li>
+  <li>but I get the gist</li>
+</ul>
 
 </body>
 </html>
