--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <header>
 
   <nav>
-    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/index.html">MF</a>
-    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/bmfweb.html">BMF</a>
-    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/index.html">XBMF</a>
+    <a href="~/index.html">MF</a>
+    <a href="~/bmfweb.html">BMF</a>
+    <a href="~/xbfmweb.html">XBMF</a>
   </nav>
 <!-- Faire une ancre pour les trois différents sites -->
 
