ajout readme.md

--- a/bmfweb.html
+++ b/bmfweb.html
@@ -12,9 +12,10 @@
 <header>
 
   <nav>
-    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/index.html">MF</a>
-    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/bmfweb.html">BMF</a>
-    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/mfweb.html">XBMF</a>
+    <a href="https://victorhebdo.github.io/index.html">MF</a>
+    <a href="https://victorhebdo.github.io/bmfweb.html">BMF</a>
+    <a href="https://victorhebdo.github.io/xbmfweb.html">XBMF</a>
+    <a href="https://victorhebdo.github.io/javascript/index.html">XBMF-JS</a>
   </nav>
 <!-- Faire une ancre pour les trois différents sites -->
 
