--- a/xbmfweb.html
+++ b/xbmfweb.html
@@ -12,9 +12,10 @@
 <header>
 
   <nav>
-    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/index.html">MF</a>
-    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/bmfweb.html">BMF</a>
-    <a href="/Users/gabella/Desktop/dossier-thp/victorhebdo.github.io/xbmfweb.html">XBMF</a>
+    <a href="https://victorhebdo.github.io/index.html">MF</a>
+    <a href="https://victorhebdo.github.io/bmfweb.html">BMF</a>
+    <a href="https://victorhebdo.github.io/xbmfweb.html">XBMF</a>
+    <a href="https://victorhebdo.github.io/javascript/index.html">XBMF-JS</a>
   </nav>
 <!-- Ancre pour les trois différents sites (mfweb - Better bmfweb - Best xbmweb)-->
 
